<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidStudy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string-array name="aty_list">
        <item>Dial</item>
        <item>SMS</item>
        <item>DataPath</item>
        <item>XMLParser</item>
        <item>SQLite</item>
        <item>MyListView</item>
        <item>MyContentProviderAndResolver</item>
        <item>Contact</item>
        <item>CloudViewer</item>
        <item>Login(GET/POST)</item>
        <item>Demo SinaNews</item>
        <item>Download</item>
        <item>ImplicitIntent</item>
        <item>SendBroadcast</item>
        <item>PhoneWiretap</item>
        <item>BeginService</item>
        <item>BeginRemoteService</item>
        <item>LoadBigImage</item>
        <item>ImageProcess</item>
        <item>AudioPlayer</item>
        <item>VideoPlayer</item>
        <item>DefaultCamera</item>
        <item>CustomCamera</item>
        <item>WebViewInteractJS(UseCamera)</item>
        <item>MyWebView</item>
        <item>Fragment(Static)</item>
        <item>TabWithFragment(Dynamic)</item>
        <item>ShowMyUI</item>
        <item>JSON</item>
        <item>TempTest</item>
        <item>AudioRecorder</item>
        <item>QRscan</item>
        <item>RetrofitAndOkHttpTest</item>
        <item>Null</item>
        <item>Null</item>
        <item>Null</item>
    </string-array>
    
    <string name="btn_clickme">ClickMe</string>
    <string name="btn_go">Go</string>
    <string name="iv_contentd">pic</string>
    
    <string name="url_default_image" formatted="false">
        http://e.hiphotos.baidu.com/image/pic/item/a686c9177f3e6709fd0af7f639c79f3df8dc55b4.jpg
    </string>
    
    <string name="hint_name">Name: ernest</string>
    <string name="hint_password">Password: 123</string>
    <string name="btn_get">Submit(Get)</string>
    <string name="btn_post">Submit(Post)</string>
    <string name="btn_smartimage">SmartImg</string>
    <string name="downloadpath">Download to: </string>
    <string name="et_defaultpath">http://192.168.199.141:8080/SourceInsight.rar</string>
    <string name="hint_defaultpath">http://192.168.199.141:8080/SourceInsight.rar</string>
    <string name="threadnumber">"Thread number: "</string>
    <string name="hint_threadnumber">recommend 3~7</string>
    <string name="et_threadnumber">3</string>
    <string name="btn_download">Download</string>
    <string name="hint_mediapath">请输入要播放文件的路径</string>
    <string name="btn_play">播放</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_stop">停止</string>
    <string name="btn_replay">重播</string>
    <string name="et_defaltaudio">http://picosong.com/cdn/4f29183e8c64586d6de8c903e80e86ca.mp3</string>
    <string name="tv_localaudio">Local audio: /data/data/com.androidstudy/files/higirl.mp3</string>
    <string name="tv_netaudio">Net audio: http://picosong.com/cdn/4f29183e8c64586d6de8c903e80e86ca.mp3</string>
    <string name="et_defaltvideo">http://dw4.convertfiles.com/files/0462502001421234119/index.3gp</string>
    <string name="tv_localvideo">Local video: /data/data/com.androidstudy/files/index.3gp</string>
    <string name="tv_netvideo">Net video: http://dw4.convertfiles.com/files/0462502001421234119/index.3gp</string>
    <string name="btn_takephoto">Take a photo</string>
    <string name="tv_weixin">微信</string>
    <string name="tv_friend">朋友</string>
    <string name="tv_contacts">通讯录</string>
    <string name="tv_setting">设置</string>
    <string name="tv_fragmentcontent">使用Fragment做主面板</string>
    <string name="tv_title">我不是微信</string>

    <string name="menu_settings">Settings</string>
    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    
    
</resources>
