<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tv_localaudio" />
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tv_netaudio" />
    
    <EditText android:id="@+id/et_path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mediapath"
        android:text="@string/et_defaltaudio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button android:id="@+id/btn_play"
            android:onClick="play"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_play" />
        <Button android:id="@+id/btn_pause"
            android:onClick="pause"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_pause" />
        <Button android:id="@+id/btn_stop"
            android:onClick="stop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />
        <Button android:id="@+id/btn_replay"
            android:onClick="replay"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_replay" />
    </LinearLayout>

</LinearLayout>
