<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
    
    <!-- 使用此布局文件时，若使用了Button点击处理，实现onClickProcess函数即可 -->
    <LinearLayout
        android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical">
        <TextView android:id="@+id/text"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/hello_world" />
        <Button android:id="@+id/btn_record_wav"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:text="record_wav"
		      android:visibility="visible" />
	    <Button android:id="@+id/btn_record_amr"
	      	  android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="record_amr"
	          android:visibility="visible" />
	  	<Button android:id="@+id/btn_stop"
	      	  android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:text="stop"
		      android:visibility="visible" />
	  	<Button android:id="@+id/btn4"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:onClick="onClickProcess"
		      android:text="@string/btn_clickme"
		      android:visibility="gone" />
	  	<Button android:id="@+id/btn5"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:onClick="onClickProcess"
		      android:text="@string/btn_clickme"
		      android:visibility="gone" />
	  	<ImageView android:id="@+id/iv1" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/iv_contentd"
	        android:visibility="gone" />
	  	<ImageView android:id="@+id/iv2" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/iv_contentd"
	        android:visibility="gone" />
	  	<ImageView android:id="@+id/iv3" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/iv_contentd"
	        android:visibility="gone" />
    </LinearLayout>
    
</ScrollView>
